--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Sprites/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Fonts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/letterUI.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Scenes/", "res://Fonts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/demon.tscn", "res://Scenes/line.tscn", "res://Scenes/portal.tscn")
-current_scene="res://Scenes/main.tscn"
+open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/demon.tscn", "res://Scenes/line.tscn", "res://Scenes/portal.tscn", "res://Scenes/letterUI.tscn")
+current_scene="res://Scenes/letterUI.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/IncantationTextEdit.gd", "res://Scenes/Portal.gd", "res://Walk.gd"]
-selected_script="res://Scenes/Portal.gd"
-open_help=["Control"]
+open_scripts=["res://Scenes/Alphabet.gd", "res://Scenes/IncantationDisplay.gd", "res://Scenes/IncantationTextEdit.gd", "res://Scenes/Letter.gd", "res://Scenes/LetterLabel.gd", "res://Scenes/LetterStockContainer.gd", "res://Scenes/letterUI.gd", "res://Scenes/Portal.gd", "res://Walk.gd"]
+selected_script="res://Scenes/letterUI.gd"
+open_help=["Control", "Dictionary", "Object", "PackedScene", "String", "TextEdit"]
 script_split_offset=87
 list_split_offset=0
 
