--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,13 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"Node2D",
+"class": &"Alphabet",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Alphabet.gd"
+}, {
+"base": &"Label",
+"class": &"LetterUI",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/letterUI.gd"
+}])
